# FOSSil

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.html  TRADEMARKS.md  about.toml  output.txt  rustfmt.toml
.gitea/workflows/: build.yml  release.yml  rust.yml
artifacts/: SHA256SUMS  fossil-server  fossil-server-linux-x86_64
client/: Cargo.toml
client/assets/: bg.xcf
client/src/: gui.rs  lib.rs  main.rs  network.rs  packet.rs
client/tests/: client_tests.rs
docs/: architecture.md  development.md  plan.md  protocol.md  roadmap.md  security.md
fossil_shared/: Cargo.toml
fossil_shared/src/: message.rs  packet.rs
server/: Cargo.toml
server/src/: handler.rs  lib.rs  main.rs  packet.rs  server.rs  tcp.rs
server/tests/: placeholder.md  server_tests.rs
src/: handler.rs  main.rs  packet.rs  placeholder.md  server.rs
website/: index.html  script.js  styles.css
