[package]
name = "fossil-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
eframe = { version = "0.31.1", features = ["default"] }
tokio = { version = "1.52.3", features = ["full"] }
fossil_shared = { path = "../fossil_shared" }