[package]
name = "fossil-client"
version = "0.1.0"
edition = "2021" 
license = "AGPL-3.0-only"

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
dioxus = { version = "0.7.9", default-features = true, features = ["native"] }
dioxus-native = "0.7.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.52.3", features = ["full"] }
fossil_shared = { path = "../fossil_shared" }
socket2 = "0.5"
